@@ -1,3 +1,8 @@
+2004-08-02  Han-Wen Nienhuys   <hanwen@xs4all.nl>
+
+	* site/about/automated-engraving/typography-features.html: remark
+	about rounded corners.
+
 2004-07-31  Heikki Junes  <hjunes@cc.hut.fi>
 
 	* site/images/flaticon.png: new file.
